# trunk

./: .gitignore  CLAUDE.md  README.md  TECH_DEBT.md  TODO.md  justfile  mise.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: bench_commands.rs  bench_graph.rs  bench_ipc.rs
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  macos_traffic_lights.rs  shell_env.rs  state.rs  watcher.rs
src-tauri/src/commands/: branches.rs  commit.rs  commit_actions.rs  diff.rs  fs.rs  history.rs  interactive_rebase.rs  merge_editor.rs  mod.rs  operation_state.rs  remote.rs  repo.rs  review.rs  staging.rs  stash.rs  wsl.rs
src-tauri/src/commands/review/: range.rs
src-tauri/src/commands/wsl/: mod.rs  unsupported.rs  windows.rs
src-tauri/src/git/: backend.rs  backend_fs.rs  command_runner.rs  editor.rs  graph.rs  mod.rs  read_model.rs  repository.rs  review.rs  review_store.rs  syntax.rs  types.rs  workdir_snapshot.rs
src-tauri/src/git/backend/: local.rs  mod.rs
src-tauri/src/git/backend/wsl/: command.rs  commit.rs  fs.rs  mod.rs  poller.rs  (+3 more)
src-tauri/tests/: test_branches.rs  test_commit_actions.rs  test_diff.rs  test_integ_serde.rs  test_integ_workflows.rs  test_operation_state.rs  test_repo.rs  test_review.rs  test_staging.rs
src-tauri/tests/common/: assertions.rs  builder.rs  context.rs  mod.rs
src-tauri/tests/common/drivers/: branches.rs  commit.rs  commit_actions.rs  diff.rs  history.rs  interactive_rebase.rs  mod.rs  operation_state.rs  repo.rs  staging.rs  stash.rs
(+721 files in other folders)
