[package]
name = "trunk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trunk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
bench = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
notify = "7"
notify-debouncer-mini = "0.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-window-state = "2"
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["process", "io-util"] }
libc = "0.2"
similar = { version = "2.7", features = ["inline"] }
syntect = { version = "5", default-features = false, features = ["default-onig"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench_graph"
harness = false

[[bench]]
name = "bench_commands"
harness = false

[[bench]]
name = "bench_ipc"
harness = false

